--- a/SalesWebMvc/Views/Home/Privacy.cshtml
+++ b/SalesWebMvc/Views/Home/Privacy.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model SalesWebMvc.Models.ViewModels.ErrorViewModel
+@{
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
